[package]
name = "async-tokio"
version = "0.3.0"
license = "Apache-2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
homepage = "https://github.com/pyo3/tokio"
repository = "https://github.com/pyo3/tokio.git"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
boxfnonce = "*"
chan = "0.1"
log = "0.3"
env_logger = "0.4"
net2 = "0.2"
libc = "0.2"
lazy_static = "0.2"
twoway = "0.1"
bytes = "0.4"
mio = "0.6"
futures = "0.1"

tokio-io = "0.1"
tokio-core = "0.1"
tokio-signal = "0.1"
tokio-uds = "0.1"

[dependencies.pyo3]
version = "^0.2.6"
features = ["python3"]

[dev-dependencies]
http-muncher = "0.3"
httparse = "*"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
